--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
     background-color: #f2f2f6;
     font-size: 16px;
-    font-family: Lato, Verdana, sans-serif;
+    font-family: Lato, sans-serif;
 }
